@@ -2,6 +2,7 @@
 	* Updated LICENSE headers in sources
 	* Added mknod, and hostname commands to set of utilities
 	* Added free
+	* Added xxd, od, and hexdump to set of utilities
 
 7/17/2024 V0.1.0		 - patch level 241
 	* Merged example3 to the Minibox SHell
